--- a/2021-2022 SAC BPP Pairing Code.ipynb
+++ b/2021-2022 SAC BPP Pairing Code.ipynb
@@ -434,7 +434,6 @@
     "    studentToExport = studentRaw[studentRaw['Email Address'] == email]\n",
     "    numOfRows = alumniToExport.shape[0]\n",
     "    fileName = \"Student-Alumni-Pairings/\" + email[0: email.find('@')] + '-' + str(numOfRows) + '_Pairs.xlsx'\n",
-    "    #if (numOfRows >= 15):\n",
     "    save_xls(studentToExport, alumniToExport, fileName)"
    ]
   },
@@ -457,7 +456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -471,7 +470,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c6b20b29be5732ed6526df05c8b205bf2f4d9c54bf4635dbf188ac0d23978d04"
+   }
   }
  },
  "nbformat": 4,
